--- a/compose.yml
+++ b/compose.yml
@@ -1,20 +1,48 @@
 services:
   web:
-    image: httpd:latest
+  # Nos permite ver root@web en la consola en vez de root@fagGasgasgASG1512AGsgag. 
+    hostname: web
+  # Especificamos que queremos constuir nuestra propia imagen.
+    build: docker/web
     networks:
       rede_test:
         aliases:
           - www.proba.lan
           - proba.lan
+          # Resolución de nombres "Trucada". Nos permite acceder a los virtualhost
+          # en el navegador en vez de poner la IP del servidor.
+          - www.server1.lan
+          - server1.lan
+          - wwww.server2.lan
+          - server2.lan
+    volumes:
+    # Carpeta que tiene todo el contenido web.
+      - ./html:/web
+    # Montamos los 2 virtual host en sites-enabled para activarlos automáticamente al lanzar
+    # el contenedor.
+      - ./vhost/server1.conf:/etc/apache2/sites-enabled/server1.conf
+      - ./vhost/server2.conf:/etc/apache2/sites-enabled/server2.conf
+    # Montamos una carpeta fuera de /web para poder utilizar espacios web.
+      - ./html/alias:/srv
+    # Montamos un virtual host con SSL
+      - ./vhost/server1-ssl.conf:/etc/apache2/sites-enabled/server1-ssl.conf
+    # Montamos el certificado y la llave para SSL en las que proporciona apache.
+      - ./certs/certificado.pem:/etc/ssl/certs/certificado.pem
+      - ./certs/llave.key:/etc/ssl/private/llave.key
 
+    # AÑADIR PORTS SOLO EN WINDOWS. Esto no se tiene que hacer si se esta en Linux.
+    ports:
+      - 80:80
+      - 443:443
   cliente:
-    build: cliente
+    build: docker/cliente
     networks:
       - rede_test
-    environment:
-    - DISPLAY=${DISPLAY}
-    volumes:
-    - /tmp/.X11-unix:/tmp/.X11-unix
+    # COMENTAR SOLO EN WINDOWS.
+    #environment:
+    #- DISPLAY=${DISPLAY}
+    #volumes:
+    #- /tmp/.X11-unix:/tmp/.X11-unix
 
 networks:
   rede_test:
